# ガゾーナラベPDFの更新履歴

- 2022-12-31 Ver.0.9.3
	- 初公開。
- 2023-01-01 Ver.0.9.4
    - ダイアログの改良。
    - 初期化したときにレジストリも更新するようにした。
    - PNG/GIF/BMP画像の品質を向上させた。
    - ICO/WMF/EMF画像に対応。
    - データのバリデーション。
    - インストーラを追加。
- 2023-XX-YY Ver.0.9.5
    - マニフェストを追加。
    - バージョン情報を追加。
    - カーソル(CUR)に対応。
    - Susieプラグインをサポート。
    - リストボックスを横スクロール可能に。