@@ -15,3 +15,5 @@
     - カーソル(CUR)に対応。
     - Susieプラグインをサポート。
     - リストボックスを横スクロール可能に。
+    - フォントマップ情報「fontmap.dat」を追加。様々なフォントが利用可能に。
+    - Unicodeサポート。
